# kvvm-ai-video

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_host.sh  build_host_test.sh  build_target.sh  build_target_test.sh  build_test.sh  clean.sh  dockerfile  start.sh
.github/workflows/: build-release.yml
include/: videodev2.h
lib/: libv4l2.so.0.0.0
scripts/: hex.py  version.sh
src/: args.c  args.h  buffer.c  buffer.h  enc.c  enc.h  enc_file.c  file.c  file.h  frame.h  main.c  socket.c  socket.h  time.c  time.h  utils.c  utils.h  version.h  video.c  video.h
tests/: dma_test.c  ee.c  enc_test.c  enc_test2.c  socket_test.c  unit_socket_test.c  unit_v4l2_enc_test.c  v4l2_enc_test.c  v4l2_fmt_test.c  v4l2_query_size_test.c  v4l2_test.c
